--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-  "dev": "next dev --turbo",
-  "build": "prisma generate && next build",
+  "postinstall": "prisma generate",
+  "dev": "next dev",
+  "build": "next build",
   "start": "next start",
   "lint": "next lint"
-},
+  },
   "dependencies": {
     "@prisma/client": "^6.2.1",
     "next": "15.1.5",
